--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pyonpyon/pikasu",
   "type": "module",
-  "version": "0.0.1-2",
+  "version": "0.0.1-3",
   "description": "micro framework for solid-js, which enables partial hydrating",
   "files": ["libdist/"],
   "exports": {
@@ -25,13 +25,13 @@
     "@babel/preset-typescript": "^7.26.0",
     "babel-preset-solid": "^1.9.3",
     "esbuild": "^0.25.0",
-    "fast-glob": "^3.3.3",
-    "fastify": "^5.2.1"
+    "fast-glob": "^3.3.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/babel__core": "^7.20.5",
     "@types/node": "^22.13.1",
+    "fastify": "^5.2.1",
     "solid-js": "^1.9.4",
     "typescript": "^5.7.3"
   },
