many changes (yep)

--- a/biome.json
+++ b/biome.json
@@ -22,6 +22,10 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "style": {
+        "noNonNullAssertion": "off",
+        "noParameterAssign": "off"
+      },
       "suspicious": {
         "noExplicitAny": "off"
       }
