--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "esbuild": "^0.25.0",
     "esbuild-sass-plugin": "^3.3.1",
     "fast-glob": "^3.3.3",
-    "fastify": "^5.2.1",
+    "hono": "^4.7.1",
     "mime-types": "^2.1.35",
     "postcss": "^8.5.2",
     "postcss-modules": "^6.0.1",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/babel__core": "^7.20.5",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.13.4",
     "solid-js": "^1.9.4",
     "typescript": "^5.7.3"
