--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@pyonpyon/pikasu",
   "type": "module",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "micro framework for solid-js, which enables partial hydrating",
-  "files": [
-    "libdist/"
-  ],
+  "files": ["libdist/"],
   "exports": {
     ".": {
       "types": "./libdist/types.d.ts",
@@ -50,10 +48,6 @@
     "typescript": "^5.7.3"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "@biomejs/biome",
-      "@parcel/watcher",
-      "esbuild"
-    ]
+    "onlyBuiltDependencies": ["@biomejs/biome", "@parcel/watcher", "esbuild"]
   }
 }
